# oxinstaller

./: Cargo.toml  README.md
src/: main.rs  terminal.rs
