[package]
name = "oxinstaller"
version = "0.1.0"
edition = "2021"
authors = ["Kittech <kittech@skiff.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["installer", "linux", "arch"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
